@@ -14,7 +14,8 @@ sox-14.0.1
 
   Bug fixes:
 
-  o Fix Sndtool read error causing noise at start.  (Reynir Stefansson)
+  o Fix Sndtool read error causing noise at start.  (Reynir Stefánsson)
+  o Fix [bug #1804772] Reverb effect locks up.  (Reynir Stefánsson)
   o Fix loss of 1 decoded FLAC block when using "trim 0 ...".  (robs)
   o Let "make distcheck" run some automated test scripts.
   o Distribute missing cmake files.
